--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ __pycache__/grounding.cpython-310.pyc
 __pycache__/minmod.cpython-310.pyc
 __pycache__/parse_canset.cpython-310.pyc
 __pycache__/parsing.cpython-310.pyc
+__pycache__/splitting.cpython-310.pyc
