--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,4 @@ __pycache__/minmod.cpython-310.pyc
 __pycache__/parse_canset.cpython-310.pyc
 __pycache__/parsing.cpython-310.pyc
 __pycache__/splitting.cpython-310.pyc
-formula.txt
-structures.txt
+formula
