--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ __pycache__/argparser.cpython-310.pyc
 __pycache__/basics.cpython-310.pyc
 __pycache__/grounding.cpython-310.pyc
 __pycache__/minmod.cpython-310.pyc
-__pycache__/parse_canset.cpython-310.pyc
 __pycache__/parsing.cpython-310.pyc
 __pycache__/splitting.cpython-310.pyc
 formula
+__pycache__/canset.cpython-310.pyc
+__pycache__/parse_canset.cpython-310.pyc
