--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ __pycache__/parsing.cpython-310.pyc
 __pycache__/splitting.cpython-310.pyc
 __pycache__/canset.cpython-310.pyc
 __pycache__/parse_canset.cpython-310.pyc
+__pycache__/rank_fun.cpython-310.pyc
